--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "homepage": "https://github.com/rndD/package-cleanup",
   "bugs": "https://github.com/rndD/package-cleanup/issues",
   "dependencies": {
-    "globby": "^1.1.0",
-    "coa": "^0.4.1",
-    "lodash": "^3.3.1",
-    "q": "^1.1.2",
-    "q-io": "^1.11.6"
+    "globby": "1.1.0",
+    "coa": "0.4.1",
+    "lodash": "3.3.1",
+    "q": "1.1.2",
+    "q-io": "1.11.6"
   },
   "devDependencies": {
     "chai": "^1.9.1",
